# mich

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: evalconfig.yaml  mainconfig.yaml  simulation-exact.yaml  simulation-linear.yaml  simulation-quadratic.yaml  simulation.yaml
config/callbacks/: default.yaml
config/datamodule/: default.yaml
config/eval/: single_layer_single_source.yaml
config/experiments/: debug_offline.yaml  debug_online.yaml
config/loggers/: default.yaml  mlflow.yaml  wandb.yaml
config/model/: default.yaml  longfreq.yaml  supervised.yaml
config/paths/: default.yaml
config/private/: default.yaml
config/simulation/: base.yaml  exact.yaml  linear.yaml  quadratic.yaml  single_layer_multi_source.yaml  single_layer_single_source.yaml  three_layer_multi_source_multi_active.yaml  three_layer_multi_source_single_active.yaml  three_layer_single_source_shared_position.yaml  three_layer_single_source_shared_position_shared_pulse.yaml  three_layer_single_source_single_active.yaml
config/trainer/: default.yaml
notebooks/: 01_running_simulations.ipynb  02_heinzlenet_model.ipynb  datamodule.ipynb  datasim.ipynb  datatest.ipynb  forward.md  haemo_gridsearch.ipynb  heinzlenet.md  lightning_framework.md  training.md
results/mich-bold-inversion/single-layer/: full_config.yaml
results/mich-bold-inversion/single-layer/.hydra/: config.yaml  hydra.yaml
results/mich-bold-inversion/single-layer/checkpoints/: best.ckpt  last-v1.ckpt  last-v2.ckpt  last.ckpt
scripts/: eval_mich.py  run_sim.py  run_sim_linear.py  train_mich.py
src/data/: balloon.py  balloon_linear.py  neuronal.py  signals.py  synthetic.py
src/mich/: __init__.py
src/mich/data/: balloon.py  neuronal.py  signals.py  synthetic.py
src/mich/models/: blocks.py  collocation.py  mich.py  mich_logging.py  mich_losses.py  physio.py  supervised.py
src/mich/utils/: hydra_utils.py  plotting.py  run_adapters.py  torch_utils.py
src/models/: blocks.py  layers.py  mich.py  muon.py  normaliser.py  pinns.py  supervised.py
src/utils/: hydra_utils.py  plotting.py  torch_utils.py
tests/: conftest.py  test_balloon.py  test_blocks.py  test_collocation.py  test_grads.py  test_hydra_utils.py  test_mich.py  test_mich_logging.py  test_mich_losses.py  test_neuronal.py  test_normaliser.py  test_physio.py  test_run_adapters.py  test_signals.py  test_supervised.py  test_synthetic.py  test_torch_utils.py
tests/diagnostics/: common.py  conftest.py  test_attribution.py  test_bandwidth.py  test_dsdt_supervision_target.py  test_ground_truth_integration_check.py  test_lag_all_signals.py  test_lag_clean_decomposition.py  test_lag_derivative_decomposition.py  test_lag_from_emit.py  test_lag_subsample.py  test_localization.py  test_origin.py  test_premises.py  test_structural.py  test_units_correction.py
tests/test-plot/: plot_sim.ipynb
