[project]
name = "mich"
version = "0.1.0"
description = "Physics-informed neural modeling of BOLD and latent neural activity"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "scipy>=1.11",
    "h5py>=3.9",

    # Deep learning
    "torch>=2.2",
    "lightning>=2.1",

    # Configuration and logging
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "colorlog>=6.8",

    # Visualization
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6",
    "ruff>=0.4",
    "pytest>=9.0.2",
]

notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

analysis = [
    "pandas>=3.0.0",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
