[project]
name = "mich"
version = "0.1.0"
description = "Physics-informed neural modeling of BOLD and latent neural activity"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "scipy>=1.11",
    "h5py>=3.9",
    # Deep learning
    "torch>=2.2",
    "lightning>=2.1",
    # Configuration and logging
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "colorlog>=6.8",
    "hydra-colorlog>=1.2.0",
    # Visualization (keep only if truly runtime; otherwise move to optional)
    "matplotlib>=3.9",
    "rich>=14.3.3",
    # Utilities
    "rootutils>=1.0.7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

notebooks = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29",
]

analysis = [
    "pandas>=2.2",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: long-running tests",
  "gpu: requires CUDA/GPU",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 0

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------
# IMPORTANT: src-layout config
# -----------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
