[project]
name = "mich"
version = "0.1.0"
description = "Physics-informed neural modeling of BOLD and latent neural activity"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "scipy",
    "h5py",
    # Deep learning
    "torch",
    "lightning",
    # Configuration and logging
    "hydra-core",
    "omegaconf",
    "wandb",
    "colorlog",
    "hydra-colorlog",
    # Visualization (keep only if truly runtime; otherwise move to optional)
    "matplotlib",
    "rich",
    # Utilities
    "jupyter",
    "ruff",
    "deprecated",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

notebooks = [
    "jupyter",
    "ipykernel",
]

analysis = [
    "pandas",
    "seaborn",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: long-running tests",
  "gpu: requires CUDA/GPU",
]

[tool.coverage.run]
branch = true
source = ["src/mich"]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 0

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# torch==2.12.1 hard-pins nvidia-cudnn-cu13==9.20.0.48, which throws
# CUDNN_STATUS_SUBLIBRARY_VERSION_MISMATCH on conv2d on this system's
# driver/GPU (A30, driver 610.43.02). 9.21.0.82 is confirmed working.
[tool.uv]
override-dependencies = [
    "nvidia-cudnn-cu13==9.21.0.82",
]

# -----------------------------
# IMPORTANT: src-layout config
# -----------------------------

[tool.setuptools.packages.find]
where = ["src"]
include = ["mich*"]
